easeljs Drag and Drop

--- a/scripts/dogGraded.html
+++ b/scripts/dogGraded.html
@@ -1308,12 +1308,19 @@
 
 		    destinationX = stage.canvas.clientWidth * 2 * 0.70; //(stage.canvas.clientWidth * 2); //* 0.75;// 400;
 		    destinationY = stage.canvas.clientHeight * 2 * 0.50; //(stage.canvas.clientHeight); //* 0.75;//200;
+		    //box.x = 0;
+		    //box.y = 0;
 		    destination.x = destinationX;
 		    destination.y = destinationY;
+		    // destination.x = 0;
+		    // destination.y = 0;
 
 		    // WHY!!!!????
-		    destination.setBounds(1200, 540, 130, 10);
+		    //destination.setBounds(1200, 540, 130, 10);
+		    console.log(destinationX);
+		    console.log(destinationY);
 
+		    destination.setBounds(destinationX, destinationY, destWidth, destHeight);
 
 		    destination.addChild(box);
 
@@ -1338,7 +1345,8 @@
     			dragger.x = offset * (i*2 + 1) * 2;
     			dragger.y = 380;
     			dragger.addChild(textRect, label);
-    			dragger.setBounds(100, 100, dragRadius, dragRadius);
+    			//dragger.setBounds(0, 0, dragRadius, dragRadius);
+    			dragger.setBounds(-labelWidth,-labelHeight,labelWidth*2,labelHeight*2);
 
     			//-------
     			dragger.on("pressmove", function(evt) {
@@ -1378,23 +1386,33 @@
 		    var objBounds1 = obj1.getBounds().clone();
 		    var objBounds2 = obj2.getBounds().clone();
 
-		    var pt = obj1.globalToLocal(objBounds2.x, objBounds2.y);
+		    console.log('WAT');
+		    console.log(objBounds1);
+		    console.log(objBounds2);
 
-		    var h1 = -(objBounds1.height / 2 + objBounds2.height);
-		    var h2 = objBounds2.width / 2;
-		    var w1 = -(objBounds1.width / 2 + objBounds2.width);
-		    var w2 = objBounds2.width / 2;
+		    //var pt = obj1.globalToLocal(objBounds2.x, objBounds2.y);
+		    var pt = obj1.globalToLocal(stage.x, stage.y);
+		    pt = { x: -pt.x, y: -pt.y }
+		    console.log(pt);
 
-		    if(pt.x > w2 || pt.x < w1) return false;
-		    if(pt.y > h2 || pt.y < h1) return false;
+		    // var h1 = -(objBounds1.height / 2 + objBounds2.height);
+		    // var h2 = objBounds2.height / 2;
+		    // var w1 = -(objBounds1.width / 2 + objBounds2.width);
+		    // var w2 = objBounds2.width / 2;
+
+		    if (
+		    	( pt.x >= objBounds2.x && pt.x <= (objBounds2.x + objBounds2.width) ) &&
+		    	( pt.y >= objBounds2.y && pt.y <= (objBounds2.y + objBounds2.height) )
+		       ) {
+
+		       	console.log('ttt');
+		    	return true;
+		    }
 		    
-		    return true;
+		    return false;
 		}
 
 		function answerIs(answer) {
-
-
-
 			if (answer == "One") {
 				$("#responseJSON").html("Correct");
 			} else {
@@ -1416,6 +1434,8 @@
 			<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; position: absolute; left: 0px; top: 0px; display: block;">
 			</div>
 		</div>
+
+		<div>How many dogs are there?</div>
 
 		<script>init();</script>
 		<div style="display:none;" id="responseJSON"></div>
